# Markdown-Keeper

./: AGENTS.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Project Design Document MarkdownKeeper.md  README.md  SECURITY.md  pyproject.toml
.devcontainer/: devcontainer.json  post-create.sh
.github/: PULL_REQUEST_TEMPLATE.md
.serena/: project.yml
.serena/memories/: project_overview.md  suggested_commands.md  task_completion.md
docs/: COMPATIBILITY.md  OPERATIONS_RUNBOOK.md  PROJECT_DESIGN_DOCUMENT.md  USAGE.md  architecture.md
docs/plans/: 2026-02-21-complete-features-implementation.md
examples/: semantic-cases.json
src/markdownkeeper/: __init__.py  config.py  daemon.py  service.py
src/markdownkeeper/api/: server.py
src/markdownkeeper/cli/: main.py
src/markdownkeeper/indexer/: __init__.py  generator.py
src/markdownkeeper/links/: validator.py
src/markdownkeeper/metadata/: manager.py  summarizer.py
src/markdownkeeper/processor/: parser.py
src/markdownkeeper/query/: embeddings.py  faiss_index.py
src/markdownkeeper/storage/: repository.py  schema.py
src/markdownkeeper/watcher/: service.py
tests/: test_api.py  test_cli.py  test_config.py  test_daemon.py  test_embeddings.py  test_faiss_index.py  test_indexer.py  test_links_validator.py  test_metadata.py  test_parser.py  test_repository.py  test_schema.py  test_service.py  test_watcher.py
